---
source: cynic/tests/recursive-queries.rs
expression: operation.query
---
query FriendsQuery {
  allAuthors {
    friends {
      friends
      referrer
    }
    referrer {
      friends
      referrer
    }
  }
}


